[project]
name = "assomdevgit-api"
version = "0.220"
description = "API"
authors = [
    {name = "assomdevgit", email = "assomggm@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
